# TFT-Clock

./: README.md
esp32_src/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32_src/main/: CMakeLists.txt  ShiZhong.c  app_task.c  connect.c  my_mqtt_client.c  sntp.c  wifi_connect.c
esp32_src/main/include/: app_task.h  my_mqtt_client.h  sz_wifi.h
esp32_src/user/TFT/: CMakeLists.txt  lcd.c  lcd_cs.c  lcd_init.c
esp32_src/user/TFT/include/: lcd.h  lcd_init.h  lcd_number.h  lcd_number2.h  lcdfont.h
esp32_src/user/sht30/: CMakeLists.txt  myiic.c  sht30.c
esp32_src/user/sht30/include/: myiic.h  sht30.h
esp32_src/user/ws2812/: CMakeLists.txt  spi_ws2812.c
esp32_src/user/ws2812/include/: spi_ws2812.h
qt_app/code/: CMakeLists.txt  colorgradientslider.cpp  colorgradientslider.h  lcd_number.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mqttclient.cpp  mqttclient.h  mqttworker.cpp  mqttworker.h  mylabel.cpp  mylabel.h  res.qrc  settingsdialog.cpp  settingsdialog.h  style.qss  tft_clock.code-workspace
